<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/s10"
    android:paddingLeft="@dimen/s20"
    android:paddingRight="@dimen/s20"
    android:paddingTop="@dimen/s15"
    android:weightSum="4" >

    <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="top|center_vertical"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/header"
            style="@style/TextView.TextStyle.Title.AppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_logo"
            android:gravity="center"
            android:padding="@dimen/s5"
            android:text="@string/app_name"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_group"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"
        android:gravity="top|center_vertical"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/txt_old"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/s5"
            android:gravity="fill_horizontal"
            android:hint="@string/old_pass"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/info" />

        <EditText
            android:id="@+id/txt_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/s5"
            android:gravity="fill_horizontal"
            android:hint="@string/new_pass"
            android:imeActionLabel="@string/next"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/info" />

        <EditText
            android:id="@+id/txt_renew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/s5"
            android:gravity="fill_horizontal"
            android:hint="@string/renew_pass"
            android:imeActionLabel="@string/btn_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/info" />

        <RelativeLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s5" >

            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/btn_OK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/strut"
                android:layout_margin="@dimen/s5"
                android:text="@string/btn_confirm"
                android:textColor="@color/main_background" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/strut"
                android:layout_margin="@dimen/s5"
                android:text="@string/btn_cancel"
                android:textColor="@color/main_background" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>