<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/s10"
        android:paddingLeft="@dimen/s20"
        android:paddingRight="@dimen/s20"
        android:paddingTop="@dimen/s15"
        android:weightSum="3" >

        <LinearLayout
            android:id="@+id/login_logo_container"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="top|center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/header"
                style="@style/TextView.TextStyle.Title.AppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_logo"
                android:padding="@dimen/s5"
                android:text="@string/app_name"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_main_group"
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="2"
            android:gravity="top|center_vertical"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txtUsername"
                style="@style/EditText.TextStyle.Login.Username" />

            <EditText
                android:id="@+id/txtPassword"
                style="@style/EditText.TextStyle.Login.Password.Done"
                android:hint="@string/login_password"
                android:imeActionLabel="@string/login" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s5"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/s4"
                android:text="@string/forgot_password"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>