<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    android:clickable="true"
    android:padding="@dimen/s10" >

    <!-- Bottom Button -->

    <RelativeLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <View
            android:id="@+id/strut"
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/strut"
            android:layout_margin="@dimen/s5"
            android:text="@string/btn_confirm"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/strut"
            android:layout_margin="@dimen/s5"
            android:text="@string/btn_cancel"
            android:textColor="@color/white" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn"
        android:layout_marginBottom="@dimen/s5"
        android:cacheColorHint="#00000000"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title1"
                style="@style/TextView.TextStyle.Padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contact"
                android:singleLine="false"
                android:text="@string/menu_1"
                android:textColor="@color/title" >
            </TextView>

            <LinearLayout
                android:id="@+id/edit_contact_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/s10"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/s5"
                android:paddingTop="@dimen/s5" />

            <TextView
                android:id="@+id/title2"
                style="@style/TextView.TextStyle.Padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contact"
                android:singleLine="false"
                android:text="@string/key_contact_title"
                android:textColor="@color/title" >
            </TextView>

            <LinearLayout
                android:id="@+id/edit_contact_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/s10"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/s5"
                android:paddingTop="@dimen/s5" />

            <TextView
                android:id="@+id/title3"
                style="@style/TextView.TextStyle.Padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/contact"
                android:singleLine="false"
                android:text="@string/key_contact_3_title"
                android:textColor="@color/title" >
            </TextView>

            <LinearLayout
                android:id="@+id/edit_contact_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/s5"
                android:paddingTop="@dimen/s5" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>